[gd_scene load_steps=4 format=2]

[ext_resource path="res://Anims/Player_spriteframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Objects/Player.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 19.0
height = 14.0

[node name="Player" type="KinematicBody2D"]
collision_mask = 45
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="WallChecker" type="RayCast2D" parent="."]
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 2
collide_with_areas = true

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
